# sae

./: README.md  pines
src/main_package/: package.xml  setup.cfg  setup.py
src/main_package/launch/: sae.launch.py  sensors.launch.py
src/main_package/main_package/actuadores/: m1_actuator.py  m2_actuator.py
src/main_package/main_package/controladores/: m1_controller.py  m2_controller.py
src/main_package/main_package/sensores/: distanceSensor_node.py  mpu6050_node.py  tcrt5000_node.py
src/main_package/main_package/servicios/: client.py  gui_client.py  server.py  web_gui_client.py
src/main_package/main_package/templates/: index.html
src/service_package/: CMakeLists.txt  package.xml  setup.cfg  setup.py
src/service_package/srv/: SetSpeed.srv
