<?xml version="1.0"?>
<package format="3">
  <name>main_package</name>
  <version>0.0.1</version>
  <description>Paquete principal con sensores, actuadores, controladores y servicios del proyecto SAE</description>
  <maintainer email="taller@example.com">taller</maintainer>
  <license>MIT</license>

  <!-- build tool -->
  <buildtool_depend>ament_python</buildtool_depend>

  <!-- dependencias normales -->
  <exec_depend>rclpy</exec_depend>
  <exec_depend>std_msgs</exec_depend>

  <!-- 🚀 dependencia del paquete que define el servicio -->
  <exec_depend>service_package</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_python</build_type>
  </export>
</package>
