<?xml version="1.0"?>
<package format="3">
  <name>service_package</name>
  <version>0.0.1</version>
  <description>Definición del servicio SetSpeed</description>
  <maintainer email="taller@example.com">taller</maintainer>
  <license>MIT</license>

  <!-- Herramienta de compilación -->
  <buildtool_depend>ament_cmake</buildtool_depend>

  <!-- Dependencias necesarias para generar el servicio -->
  <build_depend>rosidl_default_generators</build_depend>
  <exec_depend>rosidl_default_runtime</exec_depend>

  <!-- Declarar que este paquete contiene interfaces -->
  <member_of_group>rosidl_interface_packages</member_of_group>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
